# threads-supervisor

./: .gitignore  .travis.yml  LICENSE  README.md  cabal.8.10.7.project  cabal.8.6.5.project  cabal.8.8.5.project  cabal.9.2.2.project  stack-8.10.7.yaml  stack-8.6.5.yaml  stack-8.8.4.yaml  stack-9.2.2.yaml  stack.yaml  threads-supervisor-tests.tix  threads-supervisor.cabal
.github/workflows/: haskell.yml
examples/: Main.hs
src/Control/Concurrent/: Supervisor.hs
src/Control/Concurrent/Supervisor/: Bounded.hs  Tutorial.hs  Types.hs
test/: Main.hs  Tests.hs
test/Tests/: Bounded.hs
