name:                threads-supervisor
version:             1.0.1.0
synopsis:            Simple, IO-based library for Erlang-style thread supervision
description:         Simple, IO-based library for Erlang-style thread supervision
license:             MIT
license-file:        LICENSE
author:              Alfredo Di Napoli
maintainer:          alfredo.dinapoli@gmail.com
copyright:           Alfredo Di Napoli
category:            Concurrency
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/adinapoli/threads-supervisor

library
  exposed-modules:
    Control.Concurrent.Supervisor
    Control.Concurrent.Supervisor.Tutorial
  build-depends:
    base                 >= 4.6 && < 5,
    unordered-containers >= 0.2.0.0 && < 0.3.0.0,
    stm                  >= 2.4,
    time                 >= 1.2
  hs-source-dirs:
    src
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -funbox-strict-fields

test-suite threads-supervisor-tests
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  other-modules:
    Tests
  hs-source-dirs:
    test
  default-language:
    Haskell2010
  ghc-options:
    -threaded
    "-with-rtsopts=-N"
  build-depends:
      threads-supervisor -any
    , base
    , bytestring
    , QuickCheck
    , tasty >= 0.9.0.1
    , tasty-quickcheck
    , tasty-hunit
    , time
    , stm
    , transformers